waybar/style.css
* {
  font-family: "CaskaydiaCove Nerd Font", "Noto Sans CJK SC";
  font-weight: bold;
  font-size: 11px;
  min-height: 0;
}

@import "theme.css";
@import "generated.css";

/* === Main Background === */

window#waybar {
  background: @main-bg;
}

/* === Drop Shadow === */

window#waybar > box {
  background-color: transparent;
  margin: 1px;
}

/* === Tooltip === */

tooltip {
  background: @main-bg;
  border: solid;
  border-width: 1.5px;
  border-radius: 8px;
  border-color: @main-br;
}
tooltip label {
  color: @main-fg;
  font-weight: normal;
  margin: 0.25px;
}

/* === Workspace Buttons === */

#workspaces button {
  color: @module-fg;
  border-radius: 8px;
  box-shadow: none;
  margin: 2px 0;
  padding: 0 2px;
  transition: none;
}
#workspaces button:hover {
  color: @hover-fg;
  background: @hover-bg;
  text-shadow: none;
  box-shadow: none;
}
#workspaces button.active {
  color: @active-fg;
  background: @power;
  text-shadow: none;
  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.4);
  margin: 2px;
  padding: 0 6px;
}

/* === General === */

#custom-ws,
#workspaces,
#window,
#custom-avg-cpu-freq,
#custom-cpuinfo,
#memory,
#custom-cpu,
#clock,
#custom-wifi,
#bluetooth,
#custom-update,
#custom-power-draw,
#custom-media,
#pulseaudio,
#custom-backlight,
#battery,
#custom-fcitx,
#custom-capslock,
#custom-power {
  opacity: 1;
  color: @module-fg;
  margin-bottom: 0;
  padding: 0 4px;
  text-shadow: none;
}

#custom-left1,
#custom-left2,
#custom-left3,
#custom-left4,
#custom-left5,
#custom-left6,
#custom-left7,
#custom-left8 {
  text-shadow: none;
}

#custom-right1,
#custom-right2,
#custom-right3,
#custom-right4,
#custom-right5 {
  padding-right: 3px;
  text-shadow: none;
}

/* === Modules === */

/* == Window Icon == */

#custom-ws {
  background: @main-bg;
}

/* == Workspaces == */

#workspaces {
  background: @tray;
}
#custom-right1 {
  color: @tray;
  background: @main-bg;
  text-shadow: none;
}

/* == Temperature == */

#custom-left1 {
  color: @cpuinfo;
  background: @main-bg;
  padding-left: 3px;
}
#custom-paddc {
  padding-right: 22px;
}
#custom-cpuinfo {
  background: @cpuinfo;
  padding-left: 1px;
  padding-right: 0;
}
#custom-cpuinfo.green {
  color: @temp-green;
}
#custom-cpuinfo.blue {
  color: @temp-blue;
}
#custom-cpuinfo.yellow {
  color: @temp-yellow;
}
#custom-cpuinfo.orange {
  color: @temp-orange;
}
#custom-cpuinfo.red {
  color: @temp-red;
}

/* == Memory == */

#custom-left3 {
  color: @memory;
  background: @cpuinfo;
  padding-left: 3px;
}
#memory {
  background: @memory;
  padding-left: 1px;
  padding-right: 0;
}
#memory.warning {
  color: @warning;
}
#memory.critical {
  color: @critical;
}

/* == CPU == */

#custom-left4 {
  color: @cpu;
  background: @memory;
  padding-left: 3px;
}
#custom-cpu {
  background: @cpu;
  padding-right: 0px;
  margin-right: 0px;
}
#custom-leftin1 {
  color: @cpu;
  padding-left: 0px;
  margin-left: 0px;
}
#custom-leftin1.notch {
  color: @cpu;
  background: @cpu;
  padding: 0;
  min-width: 0;
}

/* == Distro Icon == */

#custom-left5 {
  color: @distro-bg;
  background: @main-bg;
  text-shadow: none;
  padding-left: 3px;
}
#custom-left5.notch {
  color: @cpu;
  background: @cpu;
  padding: 0;
  min-width: 0;
}


#custom-distro {
  color: @distro-fg;
  background: @distro-bg;
  margin-right: -1px;
  padding-right: 0;
  padding-left: 3px;
  text-shadow: none;
}

#custom-distro.notch {
  background: @cpu;
  min-width: 220px;
  margin: 0;
  padding: 0;
}

#custom-right2 {
  color: @distro-bg;
  background: @main-bg;
}
#custom-right2.notch {
  color: @cpu;
  background: @cpu;
  padding: 0;
  min-width: 0;
}

/* == Time == */

#custom-rightin1 {
  color: @time;
}
#custom-rightin1.notch {
  background: @cpu;
}
#clock.time {
  background: @time;
}
#custom-right3 {
  color: @time;
  background: @date;
}

/* == Date == */

#clock.date {
  background: @date;
}
#clock.date:hover {
  color: @hover-fg;
  text-shadow: none;
  box-shadow: none;
}
#custom-right4 {
  color: @date;
  background: @tray;
}

/* == Tray == */

#custom-wifi {
  padding-left: 5px;
  padding-right: 8px;
  background: @tray;
}
#custom-wifi:hover {
  color: @hover-fg;
  text-shadow: none;
  box-shadow: none;
}

#bluetooth {
  padding-right: 5px;
  background: @tray;
}
#bluetooth:hover {
  color: @hover-fg;
  text-shadow: none;
  box-shadow: none;
}

#custom-update {
  padding-right: 8px;
  background: @tray;
}
#custom-update:hover {
  color: @hover-fg;
  text-shadow: none;
  box-shadow: none;
}

#custom-tlp {
  padding-right: 8px;
  background: @cpu;
  color: @module-fg;
}
#custom-tlp:hover {
  color: @hover-fg;
  text-shadow: none;
  box-shadow: none;
}

#custom-right5 {
  color: @tray;
  background: @main-bg;
}

/* == Media Info == */

#custom-media {
  font-weight: normal;
  background-color: @main-bg;
  padding-right: 8px;
  padding-left: 8px;
}
#custom-media:hover {
  color: @hover-fg;
  text-shadow: none;
  box-shadow: none;
}

/* == Output Device == */

#custom-left6 {
  color: @pulseaudio;
  background: @main-bg;
  padding-left: 3px;
}
#pulseaudio {
  background: @pulseaudio;
}
#pulseaudio:hover {
  color: @hover-fg;
  text-shadow: none;
  box-shadow: none;
}

/* == Brightness == */

#custom-left7 {
  color: @backlight;
  background: @pulseaudio;
  padding-left: 2px;
}
#custom-backlight {
  background: @backlight;
}

/* == Battery == */

#custom-left8 {
  color: @battery;
  background: @backlight;
  padding-left: 2px;
}
#battery {
  background: @battery;
}
#battery.full {
  color: @full;
}
#battery.good {
  color: @module-fg;
}
#battery.warning {
  color: @warning;
}
#battery.critical {
  color: @critical;
}
#battery.charging {
  color: @charging;
}

/* == Caps Lock == */

#custom-capslock {
  background: @battery;
  padding-left: 2px;
  padding-right: 6px;
}

/* == Input Method == */

#custom-fcitx {
  background: @battery;
  padding-left: 6px;
  padding-right: 6px;
  font-weight: 700;
}
#custom-fcitx.fcitx-cn {
  color: #b48ead;
}
#custom-fcitx.fcitx-en {
  color: @module-fg;
}
#custom-fcitx.fcitx-unknown {
  color: @warning;
}
#custom-fcitx:hover {
  color: @hover-fg;
}

/* == Power Button == */

#custom-leftin2 {
  color: @battery;
  background: @main-bg;
}
#custom-power {
  color: @main-bg;
  background: @power;
  text-shadow: none;
  box-shadow: 1px 0 2px 1px rgba(0, 0, 0, 0.6);
  border-radius: 10px;
  margin: 2px 4px 2px 0;
  padding-right: 6px;
  padding-left: 9px;
}


#custom-tlp.max_performance {
  color: #d08770;
}

#custom-tlp.performance {
  color: #bf616a;
}

#custom-tlp.balanced {
  color: #ebcb8b;
}

#custom-tlp.powersaver {
  color: #a3be8c;
}

#custom-power:hover {
  color: @hover-fg;
  background: @hover-bg;
  text-shadow: none;
  box-shadow: none;
}

#custom-wireguard {
  padding-left: 5px;
  padding-right: 8px;
  background: @pulseaudio;
}

#custom-wireguard.gray {
  color: #4c566a; /* Nord0 */
}

#custom-wireguard.yellow {
  color: #ebcb8b; /* Nord Yellow */
}

#custom-wireguard.green {
  color: #a3be8c; /* Nord Green */
}

#custom-wireguard.red {
  color: #bf616a; /* Nord Red */
}

#custom-wireguard.gray {
    color: #4c566a; /* nord0 */
}

#custom-wireguard.yellow {
    color: #ebcb8b; /* nord8 */
}

#custom-wireguard.green {
    color: #a3be8c; /* nord14 */
}

#custom-wireguard.red {
    color: #bf616a; /* nord11 */
}

